styles.css
:root {
    font-size: 16px;
    font-family: "Work Sans", sans serif;
    color: hsl(292, 42%, 22%);

}

.attribution {
    font-size: 11px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

body {
    margin: 0;
}

#white-container {
    margin-left: 15px;
    margin-right: 15px;
    width: 40%;
    height: fit-content;
    position: absolute;
    inset: 0;
    margin-top: clamp(3%, 8%, 10%);
    margin-bottom: clamp(5%, 10%, 15%);
   /* overflow: auto; */
    margin-inline: auto;
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem;
    z-index: 1;
    border-radius: 20px;
}

h1 {
    font-size: 3rem;
    display: flex;
    align-items: center;
    position: sticky;
    top: 0;
    z-index: 2;
    padding: 10px;
    border-bottom: 1px solid #ddd;
    background: white;
}

.answer {
    display: none;
}

#top-background-image {
    background-image: url(images/background-pattern-desktop.svg);
    background-color: rgb(32, 1, 53);
    height: 300px;
}

#bottom-color {
    background-color: hsl(275, 100%, 97%);
    height: 100vh;
    bottom: 0;
}

body {
    display: flex;
    flex-direction: column;
    background-color: transparent;
    justify-content: center;
    align-content: center;
}

@media (max-width: 768px) {
    #white-container {
        width: 60%;
        /* Adjust the width for smaller screens if needed */
    }
}

/* Media query for devices with a max width of 480px (mobile phones) */

@media (max-width: 480px) {
    #white-container {
        width: 90%;
        height: auto;
    }
}

.plus-minus {
    background-image: url(images/icon-plus.svg);
    width: 30px;
    height: 30px;
    grid-column-start: 2;
    grid-column-end: 3;
    cursor: pointer;
    padding: 1px;
    box-sizing: border-box;
}

.plus-minus[data-state="expanded"] {
    background-image: url(images/icon-minus.svg);
}

.plus-minus[data-state="collapsed"] {
    background-image: url(images/icon-plus.svg);
}

.question {
    display: grid;
    grid-template-columns: 93% 7%;
    grid-template-rows: 1fr;
    align-items: flex-start;
    cursor: pointer;
}

.question:hover, .question:focus-within {
    color: hsl(286, 69%, 48%);
}

hr {
    color: 1px solid #ddd;
    stroke-width: 1%;
}

.icon {
    margin-right: 10px;
}

